# res

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
res/: details.toml
src/: lib.rs  sheet.rs
src/res/: config  developer.rs  name.rs  run_linux.sh
