# Res
#
# Copyright © 2017-2019 Jeron Aldaron Lau.
# Dual-licensed under either the MIT License or the Boost Software License,
# Version 1.0.  (See accompanying file LICENSE_BSL.txt or copy at
# https://www.boost.org/LICENSE_1_0.txt and accompanying file LICENSE_MIT.txt or
# copy at https://opensource.org/licenses/MIT)

[package]
name = "res"
version = "0.3.0"
authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
edition = "2018"

license = "MIT / BSL-1.0"
documentation = "https://docs.rs/res"
homepage = "http://code.plopgrizzly.com/res"
repository = "https://github.com/plopgrizzly/res"

readme = "README.md"
description = """
    Res is a build-script dependency developed by Plop Grizzly for managing your
    project's resources.
"""
keywords = ["resource", "resources", "generate", "media"]
categories = ["data-structures", "development-tools::build-utils", "multimedia"]

[dependencies]
# rgb = "0.8"
# pix = "0.6"
png_pong = "0.0.1"
# image = "^0.20"
sheep = "0.2"
heck = "0.3"
