# Res
#
# Copyright © 2017-2019 Jeron Aldaron Lau.
# Dual-licensed under either the MIT License or the Boost Software License,
# Version 1.0.  (See accompanying file LICENSE_BSL.txt or copy at
# https://www.boost.org/LICENSE_1_0.txt and accompanying file LICENSE_MIT.txt or
# copy at https://opensource.org/licenses/MIT)

[package]
name = "res"
version = "0.4.1"
authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
edition = "2018"

license = "MIT / BSL-1.0"
documentation = "https://docs.rs/res"
homepage = "https://code.plopgrizzly.com/res"
repository = "https://github.com/plopgrizzly/res"

readme = "README.md"
description = """
    Res is a build-script dependency for managing your project's resources.
"""
keywords = ["resource", "resources", "generate", "media"]
categories = ["data-structures", "development-tools::build-utils", "multimedia"]

[badges]
# travis-ci = { repository = "PlopGrizzly/res" }
codecov = { repository = "PlopGrizzly/res", branch = "master", service = "github" }
coveralls = { repository = "PlopGrizzly/res", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "PlopGrizzly/res" }
is-it-maintained-open-issues = { repository = "PlopGrizzly/res" }
maintenance = { status = "actively-developed" }

[dependencies]
png_pong = "0.0.2"
sheep = { version = "0.2", default-features = false, features = ["amethyst"] }
heck = "0.3"
